<resources>
    <string name="app_name">PWC</string>

    <string name="label_forgotten_password">Esqueceu a senha?</string>
    <string name="label_forgotten_password_description">Digite o endereço de e-mail associado com sua conta para que possamos enviar uma senha temporária:</string>
    <string name="label_sigin"><font color="#000000">Ainda não tem registro?</font> <font color="#ff8000">Registre-se</font></string>

    <string name="button_text_login">Login</string>
    <string name="button_text_cancel">Cancelar</string>
    <string name="button_text_send">Enviar</string>

    <string name="message_error_required">O campo é obrigatório</string>
    <string name="message_error_connection">Ocorreu um erro na conexão com o servidor</string>
    <string name="message_error_location">Verifique se o seu GPS está ativado</string>
    <string name="message_error_credentials">Usuário ou senha inválidos</string>
    <string name="message_error_email_format">O valor informado deve ser um e-mail válido</string>
    <string name="message_error_permission_location">A app precisa da permissão da localização para continuar</string>
    <string name="message_welcome">Seja bem vindo ao PWC!</string>

    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="label_title_questions_scren">Marketing na era digital</string>
    <string name="message_end">Muito obrigado por participar!</string>

</resources>
